--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /*  your css code here. If applicable */
+body {
+	Background-color: #f8f8f8;
+}
+.book-library {
+	Background-color: #ffffff;
+}
+p {
+	color: #777777; 
+}
+.Price-block {
+	color: #2ecc71;
+}
